--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "lint": "tslint",
-    "prepublish": "yarn build"
+    "prepublish": "yarn build",
+    "prepare": "yarn build"
   },
   "bin": {
     "build-protos": "bin/build-protos"
