--- a/package.json
+++ b/package.json
@@ -11,9 +11,7 @@
     "build": "tsc",
     "build:watch": "tsc -w",
     "lint": "tslint",
-    "prepublish": "yarn run build",
-    "prepare": "yarn run build",
-    "postinstall": "yarn run build"
+    "prepare": "yarn run build"
   },
   "bin": {
     "build-protos": "bin/build-protos"
